  is particularly slow, or if your system administrator limits your query 
  count, or if you want to squeeze as much performance as possible out of 
  Mediawiki, set $wgCacheDirectory to a writable path on the local filesystem.
  Make sure you have the DBA extension for PHP installed, this will improve 
  performance further.

=== Configuration changes in 1.16 ===

* (bug 18222) $wgMinimalPasswordLength default is now 1
* $wgSessionHandler can be used to configure session.save_handler
* $wgLocalFileRepo/$wgForeignFileRepos now have a 'fileMode' parameter to
  be used when uploading/moving files
* (bug 18761) $wgHiddenPrefs is a new array for specifying preferences not
  to be shown to users
* $wgAllowRealName and $wgAllowUserSkin were deprecated in favor of
  $wgHiddenPrefs[] = 'realname', but the former are still retained
  for backwards-compatibility
* (bug 9257) $wgRCMaxAge now defaults to three months
* $wgDevelopmentWarnings can be set to true to show warnings about deprecated
  functions and other potential errors when developing.
* Subpages are now enabled in the MediaWiki namespace by default.  This is
  mainly a cosmetic change, and does not in any way affect the MessageCache,
  which was already effectively treating the namespace as if it had subpages.
* Oracle: maintenance/ora/user.sql script for creating DB user on oracle with
  appropriate privileges. Creating this user with web-install page requires
  oci8.privileged_connect set to On in php.ini.
* Removed UserrightsChangeableGroups hook introduced in 1.14
* Added $wgCacheDirectory, to replace $wgFileCacheDirectory,
  $wgLocalMessageCache, and any other local caches which need a place to put
  files.
* $wgFileCacheDirectory is no longer set to anything by default, and so either
  needs to be set explicitly, or $wgCacheDirectory needs to be set instead.
* $wgLocalMessageCache has been removed. Instead, set $wgUseLocalMessageCache
  to true